スキーマのアップデートとそれに伴う変更をした (#28)
* Update schema

* Update test

* Update and refactor

* Fix compile errors
